[package]
name = "perftools"
version = "1.0.4"
edition = "2018"
authors = ["Pedro Henrique Penna <ppenna@microsoft.com>"]
description = "Performance Tools for Rust"
repository = "https://github.com/demikernel/perftools"
keywords = ["performance", "tracing", "profiling", "analysis"]
readme = "README.md"
license-file = "LICENSE"

[dependencies]
cfg-if = "1.0.0"
log = "0.4.17"
x86 = "0.48.0"

[features]
auto-calibrate = []

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
