[package]
name = "perftools"
version = "1.0.5"
authors = ["Microsoft Corporation"]
edition = "2021"
description = "Performance Tools for Rust"
readme = "README.md"
repository = "https://github.com/demikernel/perftools"
license = "MIT"
license-file = "LICENSE.txt"
keywords = ["performance", "tracing", "profiling", "analysis"]

[dependencies]
cfg-if = "1.0.0"
log = "0.4.17"
x86 = "0.49.0"

[features]
auto-calibrate = []

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
