[package]
name = "perftools"
version = "1.0.5"
authors = ["Microsoft Corporation"]
edition = "2021"
description = "Performance Tools for Rust"
readme = "README.md"
repository = "https://github.com/demikernel/perftools"
license = "MIT"
license-file = "LICENSE.txt"
keywords = ["performance", "tracing", "profiling", "analysis"]

[dependencies]
cfg-if = "1.0.0"
log = "0.4.17"
x86 = "0.49.0"

[features]
auto-calibrate = []

# Build profile used for releases.
[profile.release]
opt-level = 3             # Enable all compiler optimizations.
debug = false             # Do not include any debug info in the binary.
debug-assertions = false  # Do not include any debug assertions in the binary.
overflow-checks = false   # Do not check for overflows at runtime.
lto = "fat"               # Perform link time optimizations across all dependencies (overridden).
panic = "abort"           # Terminate the process upon panic (overridden).
incremental = false       # Disable incremental compilation.
codegen-units = 1         # Produce a single code generation unit (overridden).
rpath = false             # Disable runtime search path.

